@@ -1,3 +1,4 @@
+* Allow to open accounts from balance sheet
 * Add start/end balance to Trial balance
 
 Version 2.4.0 - 2012-04-23
